@@ -6,6 +6,9 @@ HISTORY
 
   ++ New features:
 
+  2017-11-14: Joel Cunningham
+  * netifapi: Add thread safe ARP cache APIs (task #14724)
+
   2017-11-06: Axel Lin
   * TCP: kill existing connections with a LOWER priority than the one currently being opened.
     Previous implementations also kill existing connections of the SAME priority.
